--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ctrl/react-adsense": "^1.7.0",
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -14,7 +15,6 @@
     "classnames": "^2.3.2",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
-    "react-adsense": "^0.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
