--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@visx/axis": "^3.1.0",
+    "@visx/grid": "^3.0.1",
     "@visx/group": "^3.0.0",
-    "@visx/marker": "^3.0.0",
-    "@visx/mock-data": "^3.0.0",
     "@visx/scale": "^3.0.0",
     "@visx/shape": "^3.0.0",
     "classnames": "^2.3.2",
