--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@ctrl/react-adsense": "^1.7.0",
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
